2011-08-09  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/export.c: Removed usage of gnome.h

	* src/app.c (app_new): Removed usage of deprecated functions

2011-08-05  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/dialog.c (gtt_help_popup): Use gtk_show_uri instead of
	gnome_help_display for displaying the application help file.

2011-07-23  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/err.c: replaced gnome.h for stdio.h for the definition of
	fprintf

	* src/err-throw.c: Replaced gnome.h by glib/gi18n.h for the
	definition of _()

2011-07-22  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/menus.c (menus_create): Create the popup menu using
	GtkUIManager

	* src/journal.c: Added callbacks for the Reports menu items

	* src/menus.c: Added menu items to the Reports menu

2011-07-21  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/Makefile.am (gnotime_SOURCES): Removed file-io.c from the
	build (support for old config file formats)

	* src/main.c (read_config): Remove support for old config file formats

2011-07-20  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/app.c (app_new): Use a plain GtkWindow instead of GnomeApp.

	* src/menus.c (menus_create): Migrate from GnomeUIInfo to
	GtkUIManager for the creation of the main menu.

2011-07-19  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/menucmd.c (menu_toggle_timer): Do not change project state
	if it already matches the menu item state. Avoid infinite loop
	when starting/stoping project timer.

	* src/toolbar.c (toolbar_toggle_timer): added function to handle
	toolbar button differently from the menu toggle timer menu item.

2011-07-11  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/status-icon.c (status_icon_menuitem_visibility): removed
	direct reference to GTK struct data members in order to make it
	buildable with the -DGSEAL_ENABLE option.

	* src/active-dialog.c, glade/active.glade: Use GtkComboBox instead
	of GtkOptionMenu in the start project dialog.