@@ -703,13 +703,13 @@ on_close_clicked_cb (GtkWidget *w, gpointer data)
 	 * pop after the destroy has happened. */
 	if (wig->hover_timeout_id)
 	{
-		gtk_timeout_remove (wig->hover_timeout_id);
+		g_source_remove (wig->hover_timeout_id);
 		wig->hover_timeout_id = 0;
 		gtk_widget_hide (wig->hover_help_window);
 	}
 	if (wig->hover_kill_id)
 	{
-		gtk_timeout_remove (wig->hover_kill_id);
+		g_source_remove (wig->hover_kill_id);
 		wig->hover_kill_id = 0;
 		gtk_widget_hide (wig->hover_help_window);
 	}
@@ -905,7 +905,7 @@ hover_timer_func(gpointer data)
 	 * screen indefinitely.  So, in case of turds, hide the hover help
 	 * after 8 seconds.
 	 */
-	wig->hover_kill_id = gtk_timeout_add (8000, hover_kill_func, wig);
+	wig->hover_kill_id = g_timeout_add_seconds (8, hover_kill_func, wig);
 	return 0;
 }
 
@@ -919,7 +919,7 @@ hover_loose_focus(GtkWidget *w, GdkEventFocus *ev, gpointer data)
 
 	if (wig->hover_timeout_id)
 	{
-		gtk_timeout_remove (wig->hover_timeout_id);
+		g_source_remove (wig->hover_timeout_id);
 		wig->hover_timeout_id = 0;
 		gtk_widget_hide (wig->hover_help_window);
 	}
@@ -983,14 +983,13 @@ html_on_url_cb(GtkHTML *doc, const gchar * url, gpointer data)
 	/* If hovering over a URL, bring up the help popup after one second. */
 	if (url)
 	{
-		/* 600 milliseconds == 0.6 second */
-		wig->hover_timeout_id = gtk_timeout_add (600, hover_timer_func, wig);
+		wig->hover_timeout_id = g_timeout_add_seconds (1, hover_timer_func, wig);
 	}
 	else
 	{
 		if (wig->hover_timeout_id)
 		{
-			gtk_timeout_remove (wig->hover_timeout_id);
+			g_source_remove (wig->hover_timeout_id);
 			wig->hover_timeout_id = 0;
 			gtk_widget_hide (wig->hover_help_window);
 		}
